--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,7 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+
+# OS generated files #
+.DS_Store
+.DS_Store?
